--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,10 @@ django-heroku==0.3.1
 heroku==0.1.4
 idna==3.2
 Pillow==8.3.2
+postgres==4.0
 psycopg2==2.9.1
+psycopg2-binary==2.9.1
+psycopg2-pool==1.1
 python-dateutil==1.5
 pytz==2021.1
 requests==2.26.0
